# devops-console-backend

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.local  MANIFEST.in  README.md  docker-build.sh  init_db.sh  pyproject.toml  setup.py
devops_console/: app.py  cache.py  config.py  init_db.py  main.py  run.py  wscom.py
devops_console/api/: deps.py
devops_console/api/v1/: __init__.py  kubernetes.py  oauth2.py  router.py  sccs.py  wscom1.py
devops_console/api/v1/endpoints/: health.py  kubernetes.py  oauth2.py  sccs.py  wscom1.py
devops_console/api/v2/: dependencies.py  router.py
devops_console/api/v2/endpoints/: admin.py  auth.py  bitbucket.py  html.py  k8s.py  sccs.py  sse.py  users.py  websocket.py
devops_console/apis/: sccs.py
devops_console/clients/: client.py  kubernetes.py  legacy-sccs.py  oauth2.py  sccs.py  sccs_v2.py  wscom.py
devops_console/config/: default.json
devops_console/core/: OAuth2.py  __init__.py  config.py  core.py  database.py  kubernetes.py  sccs.py  security.py  settings.py
devops_console/crud/: base.py  user.py
devops_console/models/: cbq.py  sccs.py  user.py  vault.py
devops_console/models/config/: sccs_config.py
devops_console/sccs/: client.py  plugin.py  provision.py  provision_v2.py  redis.py  storage_helpers.py  storage_writer.py
devops_console/sccs/plugins/: bitbucketcloud.py
devops_console/sccs/provisioning/: git_credentials.py  provision.py  storage_models.py
devops_console/sccs/realtime/: watcher.py
devops_console/sccs/schemas/: config.py  provision.py
devops_console/sccs/utils/: cd.py
devops_console/schemas/: __init__.py  bitbucket.py  cbq.py  k8s-response-models.py  sccs.py  token.py  user.py  userconfig.py  vault.py  webhooks.py
devops_console/schemas/legacy/: ws.py
devops_console/sse_event_generator/: sse_event_generator.py
devops_console/templates/: base.html  index.html  login.html  templates.py
devops_console/templates/fragments/: create-user.html  header.html  home.html  login.html  repo-cd-env.html  repo-cd-versions.html  repo-cd.html  repo-details.html  repo.html  repos-options.html  spinner.html  user.html  users.html
devops_console/tests/: fixtures.py  test_rest_api.py  test_sccs_watch.py  test_webhooks_api.py  ws_fixtures.py
devops_console/utils/: aioify.py  cfg_sources.py  crypto.py  helpers.py  logs.py  vault.py
devops_console/webhooks_server/: app.py
models/: cbq.py  vault.py
src/devops_console/clients/: __init__.py  client.py  sccs_v2.py
src/devops_console/core/: __init__.py  security.py  settings.py
src/devops_console/models/: k8s_response_models.py  sccs.py  user.py  webhooks.py
src/devops_console/models/config/: provision.py  userconfig.py
src/devops_console/sccs/: plugin.py
src/devops_console/sccs/plugins/: bitbucketcloud.py
src/devops_console/sccs/provisioning/: management_storage.py  provision.py
src/devops_console/sse_event_generator/: __init__.py
src/devops_console/webhooks_server/: app.py
tests/: test_templates.py  ws_fixtures.py
tests/data/: default.json  templates.json
(+13 files in other folders)
