[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops_console"
version = "2.1.0"
description = "Monitor and manage your devops environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Croix Bleue", email = "devops@qc.croixbleue.ca" }]

dependencies = [
  "atlassian-python-api>=3.26,<4",
  "anyio",
  "fastapi>=0.79,<1",
  "hvac>=1,<2",
  "Jinja2>=3.1.2,<4",
  "passlib[bcrypt]>=1.7.4,<2",
  "pycryptodomex>=3.17",
  "pydantic[email,dotenv]>=1.9.1,<2",
  "python-multipart",
  "SQLAlchemy>=1.4.40,<2",
  "sse-starlette>=1.1.6,<2",
  "uvicorn[standard]",
  "loguru>=0.6.0,<1",
  "requests",
  "types-requests",
]

[project.optional-dependencies]
prod = [
  "devops-kubernetes @ git+https://github.com/croixbleueqc/python-devops-kubernetes.git@master",
  "devops-sccs @ git+https://github.com/croixbleueqc/python-devops-sccs.git@develop",
]
